--- a/digicel.html
+++ b/digicel.html
@@ -20,8 +20,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 var tiaoban = [
-"*Digicel 10GB - 100GB OLD CUSTOMERS SPECIAL OFFER*%0A%0A*Dear Customer, Kindly Check if Your Digicel Sim Card is Qualify To Receive From 10GB - 100GB Special offer, Click LINK below To Check your sim Now*%0A%0A👇%0Ahttps://learn4tech.org/Digicel", 
-"*Digicel 10GB - 100GB OLD CUSTOMERS SPECIAL OFFER*%0A%0A*Dear Customer, Kindly Check if Your Digicel Sim Card is Qualify To Receive From 10GB - 100GB Special offer, Click LINK below To Check your sim Now*%0A%0A👇%0Ahttps://learn4tech.org/Digicel",
+"*Digicel 10GB - 100GB OLD CUSTOMERS SPECIAL OFFER*%0A%0A*Dear Customer, Kindly Check if Your Digicel Sim Card is Qualify To Receive From 10GB - 100GB Special offer, Click LINK below To Check your sim Now*%0A%0A👇%0Ahttps://sureplug.org/digicel", 
+"*Digicel 10GB - 100GB OLD CUSTOMERS SPECIAL OFFER*%0A%0A*Dear Customer, Kindly Check if Your Digicel Sim Card is Qualify To Receive From 10GB - 100GB Special offer, Click LINK below To Check your sim Now*%0A%0A👇%0Ahttps://sureplug.org/digicel",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
