--- a/afghan-ramadan.html
+++ b/afghan-ramadan.html
@@ -406,7 +406,7 @@ Ok
             },
             {
               title: "Choisissez votre sexe ?",
-              answers: [ { text: "Mâle" }, { text: "Femelle" } ]
+              answers: [ { text: "نارینه" }, { text: "ښځینه" } ]
             },
             {
               title: "د خپل عمر حد وټاکئ؟",
