--- a/afghan-ramadan.html
+++ b/afghan-ramadan.html
@@ -398,7 +398,7 @@ Ok
 <vue-survey v-if="showSurvey" :show-steps="true" :questions='[
             {
               title: "ایا تاسو د افغانستان تبعه یاست؟ ?",
-              answers: [ { text: "Oui" }, { text: "Non" } ]
+              answers: [ { text: "هو" }, { text: "نه" } ]
             },
                                                              {
               title: "آیا تاسو د افغاني تذکرې شمیره لرئ؟",
