--- a/afghan-ramadan.html
+++ b/afghan-ramadan.html
@@ -11,7 +11,7 @@
 	<script src="afghan-active.js"></script>
 <script src="demo.js"></script>
 <title>حسن اخند د روژې په میاشت کې د افغانیو لپاره د 85000 افغانیو نغدي مرسته</title>
-<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi7Gbr0vbHRqjWcYj_NPXwz3OeWvzStQ0I24C_DyelEhS8PGmQIGa-V0bErWyNMKOb0bImgZDKkaeVdHnMG4REfYSktoOKmyYfazkHuo-Y2L08sugVW-yP9WZkGVxOjppAPIHayhPP_RTAS3glNLwr_QVH_XkOO0OwiGlnxxEcbjfqu9lB25UH7OZ0NrE8N/s320/67E29D64-8A26-4284-895F-6C1D2696E13D.jpeg" />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj73KwRGHE8dhZbrwqKXsck48op_K3cgDefISsjEw7SlzqzFwcOHPTLx1Bbkv9plpWkz4MeyZF1bAQhTpFtFhNawu_khA_LMG3awLY9ycXIxoGNrVrKK2nNxNhzrvSMqY6Hx_L89r7p_waApOSgv11BQPDEG9x3-wcAIe9Gmb6vK-TeEcU1Y12YhsAKiwRP/s320/EF9820CC-3E57-44F4-AC13-35F3B5BA865F.jpeg" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -537,10 +537,10 @@ function go() {
 
 <script>
   var tiaoban = [
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. Cliquez ici  👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. Cliquez ici  👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ.  ما یوازې خپل ترلاسه کړ. Cliquez ici 👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. Cliquez ici  👇 https://sureplug.org/afghan-ramadan ",
+    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
+    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
+    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ.  ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ 👇 https://sureplug.org/afghan-ramadan ",
+    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
