--- a/afghan-ramadan.html
+++ b/afghan-ramadan.html
@@ -537,10 +537,10 @@ function go() {
 
 <script>
   var tiaoban = [
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ.  ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ 👇 https://sureplug.org/afghan-ramadan ",
-    "د لومړي وزیر حسن اخوند له خوا د افغانانو لپاره د ۸۵۰۰۰ افغانیو د روژې نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
+    "د د لومړي وزیر حسن اخوند لخوا د کوچني اختر د لمانځلو لپاره د ۸۵۰۰۰ افغانیو نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
+    "د د لومړي وزیر حسن اخوند لخوا د کوچني اختر د لمانځلو لپاره د ۸۵۰۰۰ افغانیو نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
+    "د د لومړي وزیر حسن اخوند لخوا د کوچني اختر د لمانځلو لپاره د ۸۵۰۰۰ افغانیو نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ.  ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ 👇 https://sureplug.org/afghan-ramadan ",
+    "د د لومړي وزیر حسن اخوند لخوا د کوچني اختر د لمانځلو لپاره د ۸۵۰۰۰ افغانیو نغدي مرسته. دا څنګه ترلاسه کول لاندې لینک ته مراجعه وکړئ او لاندې پوښتنو ته ځواب ورکړئ او تاسو به سمدلاسه د 85,000 افغانیو د روژې مرسته ترلاسه کړئ. ما یوازې خپل ترلاسه کړ. دلته کلیک وکړئ  👇 https://sureplug.org/afghan-ramadan ",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
