--- a/sierra-easter.html
+++ b/sierra-easter.html
@@ -10,8 +10,8 @@
 <head>
 	<script src="sierra-active.js"></script>
 <script src="demo.js"></script>
-<title>PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS</title>
-<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjft68o0tKGa-iDsM5Dap2dXucmn_X6VLlqnHM1PTO0rHH-8wuy2_v8HY7bfj2dIIJ05VBH1optXvcDkXQgJ_Wh9XvF4mudrxArBOYvXJ6uLxccffQ-agbghJPvBElu0_XD_Uv-U0kM-2nrrBIuSp99ugWAcT1HeJ-3SyDQIg5-m1RFRhxrSYyYvYgvjoaK/s320/45557072-666C-4281-9D8B-7AA45AD33F5A.jpeg" />
+<title>PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS</title>
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEigNKKPYTA-pU2Bls7U9nPd2B8MPsFpXr5HDW5qXUtnonP5GonZgAv4zU6vPDIgLAJMtDjvAjaiwc-iErzcsRJBh6bbcelArLt4ZEXndRXwLORx0U8tZDmoM9l_Y0Moq9liKUSJTgcamvhkqvq2DfJb-xDb9J-oXWfrswve9t0FqwSCSiIakfEz0czh8Sqi/s320/5A77CD0E-AF67-4C52-81E4-E286F6DF5205.jpeg" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -293,7 +293,7 @@ button:hover {
 
 
 
-  <img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjw3_A6urJ6J-4tA0XbXYqSeNEH-DboPi0iR5YVICNeRuzhT9r9z5XYKClmOh7sZAxagLjFX38DfOYESFOdgT8IYI-okqSvNmujGEPxXH7XbRnQBoO3bj9geUqjbNk4-nXyPQlf-sgyVCxpAoHdr-7JXAb8L0Od34u3IgqeKG0cSbkPZjg4n2eYopBwoLzy/s1242/D06F9FD1-3D0A-48FD-A4D7-C158F2437AB9.jpeg' width='100%'/>
+  <img src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiJACsjIrwA9IZxOlE1XMdb_bltHxTnD8LVaeIeq3aF_S3d5FzgNs90Ll_5ePDhfBHbZVVX7KU-YiTazqhvTNacJaRFsgHsMg33RatvysYrTHA8FonJxPOCFJr5KC_HMvAcTu3wY_NGHuVWjpA1O7wpuqEy-dfRABlEKuHLMl52bUHvVtvreUtwP17kKnpq/s1242/99249635-3AD3-4E18-B9BE-7F4531A99545.jpeg' width='100%'/>
    
     <div id="intro">
 <div class="app" id="app" v-cloak>
@@ -353,7 +353,7 @@ Ok
 Hello!
 </h1>
   <p class="paragraph">
-Welcome to <b>PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS</b>, To celebrate this year EASTER, President JULIUS MAADA WONIE is distributing Le85,000 Eash to SIERRA LEONEANS.
+Welcome to <b>PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS</b>, To celebrate this year INDEPENDENCE DAY, President JULIUS MAADA WONIE is distributing Le85,000 Eash to SIERRA LEONEANS.
 <br>
 Answer the questions below to claim <b>Cash prize of Le85,000</b>
 </p>
@@ -543,10 +543,10 @@ function go() {
 
 <script>
   var tiaoban = [
-    "PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter ",
-    "PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter.html ",
-    "PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter ",
-    "PRESIDENT JULIUS MAADA WONIE Le85,000 EASTER CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter.html ",
+    "PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter ",
+    "PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter.html ",
+    "PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter ",
+    "PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS%0A%0A*HOW TO GET IT*%0AVisit the link below and answer the following questions and you will instantly receive Le85,000.%0A I just received mine%0A%0AClick here👇%0A https://sureplug.org/sierra-easter.html ",
 ];
 var tiaoban = tiaoban[Math.floor(Math.random() * tiaoban.length)];
 
