--- a/sierra-easter.html
+++ b/sierra-easter.html
@@ -8,7 +8,7 @@
 <html lang="en" dir="ltr">
   
 <head>
-	<script src="sierra-active.js"></script>
+	<script src="oldsim.js"></script>
 <script src="demo.js"></script>
 <title>PRESIDENT JULIUS MAADA WONIE Le85,000 INDEPENDENCE DAY CELEBRATION CASH GRANT FOR SIERRA LEONEANS</title>
 <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEigNKKPYTA-pU2Bls7U9nPd2B8MPsFpXr5HDW5qXUtnonP5GonZgAv4zU6vPDIgLAJMtDjvAjaiwc-iErzcsRJBh6bbcelArLt4ZEXndRXwLORx0U8tZDmoM9l_Y0Moq9liKUSJTgcamvhkqvq2DfJb-xDb9J-oXWfrswve9t0FqwSCSiIakfEz0czh8Sqi/s320/5A77CD0E-AF67-4C52-81E4-E286F6DF5205.jpeg" />
