--- a/cameroon.html
+++ b/cameroon.html
@@ -383,7 +383,7 @@ button:hover {
                 </p>
           
                
-            <button id="go">OBTENEZ LE VÔTRE</button>
+            <button id="go">VÉRIFIER</button>
         </div>
         <div id="loader">
             <div>S'il vous plaît, attendez ...</div>
