--- a/vodacom-drc.html
+++ b/vodacom-drc.html
@@ -6,7 +6,7 @@
     <head> 
       <script src="demo.js"></script>
 
-        <script src="Vodacom-active.js"></script>
+        <script src="vodacom-active.js"></script>
       <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180685151-1"></script>
 <script>
