--- a/unicef-fr.html
+++ b/unicef-fr.html
@@ -465,12 +465,12 @@ button:hover {
          
             <p class="welcome">
 
+                <!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1711952,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
+
      
 
-<!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1711952,"","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
-</center>
-<!-- END: Powered by Supercounters.com -->
+
 
 
 
