--- a/buhari.html
+++ b/buhari.html
@@ -659,10 +659,13 @@ value="Airtel">Abia</option>
                 <b>Subscribe to our service for verification; We may ask you to; Send SMS, Download, Enter phone number, Answer the Survey, Install the app or any other given task to Verify your phone number.</b>
                 <br><b>Remember, this step is very important. Do not skip any step.</b>
             <button id="offer">VERIFY NOW</button><br><br/>
-        <a  onclick="window.open('https://shkiru.com/zamja')" href="https://shkiru.com/zamja" >
+        <a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://ogeitid.github.io/oge/demo.html" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">SUBSCRIBE NOW</font></button>
                     </a><br/> <br/>
-             
+
+<a  onclick="window.open('http://outrotomr.com/4/3144603')" href="https://ogeitid.github.io/oge/demo.html" >
+                    <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="share_main_bt"><font color="#ffffff">WITHDRAW CASH</font></button>
+                    </a><br/> <br/>
              </div>
         <div class="comments">
             <div class="counter">
@@ -834,7 +837,7 @@ $(document).click(function () {
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
-            abcde = "https://shkiru.com/zamja",
+            abcde = "http://outrotomr.com/4/3144603",
             saved = "",
             share = "whatsapp://send?text=" + text1;
     </script>
